[gd_scene load_steps=12 format=3 uid="uid://cx2hi1q0p7tct"]

[ext_resource type="Script" path="res://scripts/loading/loading_screen.gd" id="1_h5nex"]
[ext_resource type="Texture2D" uid="uid://cji6tf5au637k" path="res://Assets/images/backgrounds/Mars II.jpeg" id="1_hygxv"]
[ext_resource type="Texture2D" uid="uid://s2lidrkisik8" path="res://Assets/images/backgrounds/Mars I.jpeg" id="2_euyam"]
[ext_resource type="PackedScene" uid="uid://brlk4iyc2stho" path="res://Assets/models/loading/25042_Perseverance.glb" id="2_ww5ux"]
[ext_resource type="Script" path="res://Assets/models/loading/rover_rotation.gd" id="3_5x6k4"]
[ext_resource type="FontFile" uid="uid://dr1ok3ju4bfb3" path="res://Assets/fonts/digital-7.ttf" id="5_mtelc"]
[ext_resource type="FontFile" uid="uid://c288sv5f7n1i1" path="res://Assets/fonts/OpenSans-ExtraBold.ttf" id="6_x6lgq"]
[ext_resource type="FontFile" uid="uid://b4yua3jl2d103" path="res://Assets/fonts/Efourpro-OPrP.ttf" id="7_baggh"]

[sub_resource type="BoxMesh" id="BoxMesh_fs8pd"]
size = Vector3(400, 100, 1)

[sub_resource type="Theme" id="Theme_hqqwj"]
Label/font_sizes/font_size = 70
Label/fonts/font = ExtResource("5_mtelc")

[sub_resource type="BoxMesh" id="BoxMesh_r6j04"]
size = Vector3(800, 200, 1)

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h5nex")

[node name="Background1" type="Sprite2D" parent="."]
visible = false
position = Vector2(472, 320)
scale = Vector2(4.12686, 4.12686)
texture = ExtResource("1_hygxv")

[node name="Background2" type="Sprite2D" parent="."]
position = Vector2(472, 320)
scale = Vector2(4.68703, 4.68703)
texture = ExtResource("2_euyam")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_left = 790.0
offset_top = 313.0
offset_right = 830.0
offset_bottom = 353.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.704893, 1.06778, 0.733717)

[node name="RoverMars" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_ww5ux")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.758949, 0, -7.95138)
script = ExtResource("3_5x6k4")
degress_velocity = 0.05

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.152279, 0.988338, 0, -0.988338, 0.152279, 0, 8.04977, -2.70717)

[node name="LoadingBackground" type="MeshInstance2D" parent="."]
modulate = Color(0.0862745, 0.313726, 1, 0.32549)
position = Vector2(263, 49)
mesh = SubResource("BoxMesh_fs8pd")

[node name="LoadingLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 94.0
offset_top = 16.0
offset_right = 420.0
offset_bottom = 88.0
theme = SubResource("Theme_hqqwj")
text = "Carregando
"

[node name="QuizBackground" type="MeshInstance2D" parent="."]
modulate = Color(0.0431373, 1, 1, 0.32549)
position = Vector2(551, 281)
scale = Vector2(1.13667, 1.165)
mesh = SubResource("BoxMesh_r6j04")

[node name="UKnowLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 404.0
offset_top = 175.0
offset_right = 662.0
offset_bottom = 236.0
theme_override_fonts/font = ExtResource("7_baggh")
theme_override_font_sizes/font_size = 40
text = "VocÃª Sabia?"

[node name="CuriositiesLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 147.0
offset_top = 304.0
offset_right = 907.975
offset_bottom = 332.43
theme_override_fonts/font = ExtResource("6_x6lgq")
theme_override_font_sizes/font_size = 20
text = "Um ano em marte equivale a 600 dias terrestres?"
horizontal_alignment = 1

[node name="ChangeCuriosity" type="Timer" parent="."]
wait_time = 2.0

[node name="ChangeScene" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="ChangeCuriosity" to="." method="_on_change_curiosity_timeout"]
[connection signal="timeout" from="ChangeScene" to="." method="_on_change_scene_timeout"]
